<resources>
    <string name="app_name">saudi estate</string>
    <string name="editText3">First name</string>
    <string name="editText4">Last name</string>
    <string name="editText5">User name</string>
    <string name="editText6">Password</string>
    <string name="editText7">Confirm password</string>
    <string name="editText8">Email</string>
    <string name="editText9">Phone number</string>
    <string name="button">Sign up</string>
    <string name="button1">Log in</string>
    <string name="textView3">Forgot password?</string>

</resources>
